a few cleanups to common components